# NeuralNetwork

./: CMakeLists.txt  functions.c  functions.h  generator.c  generator.h  main.c  mnist.cpp  mnist.hpp  neural_network.c  neural_network.h  repository.c  repository.h  sudoku.cpp  sudoku.hpp  test.nn  utils.c  utils.h
